Change directory structure (WIP)

--- a/app/renderer/index.html
+++ b/app/renderer/index.html
@@ -8,8 +8,8 @@
 <div id="app"></div>
 <script>
 require('babel-register');
-require('./js/helpers/css-register');
-require('./js/app');
+require('./helpers/css-register');
+require('./app');
 </script>
 </body>
 </html>
