Change editor's font

--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Bdash</title>
+  <style>
+    @font-face {
+      font-family: "RictyDiminished";
+      src: url("RictyDiminished-Regular.ttf") format("truetype");
+    }
+  </style>
   <link rel="stylesheet" href="./out/app.css">
 </head>
 
